增加GC日志打印，并备份nohup日志和gc日志